--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       As a Program Manager at Branding Brand, I improve our project processes and quality
       to deliver better shoppings experiences for more than 200 of the top retailers
       worldwide. My career at the start-up began when I built a system for writing SEO
-      articles for our clients that increased productivity by 200%, and I have continued
+      articles for our clients that increased my team's productivity by 200%, and I have continued
       optimizing ever since.
     </div>
     <div class="text">
