--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       div.text {
         color: #000000;
         font-weight:300;
-        font-size: 14pt;
+        font-size: 20px;
         margin: 20px;
       }
       div#header {
         font-weight:600;
-        font-size: 18pt;
+        font-size: 30px;
       }
       a {
         color: #CA0962;
