--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
     <title>Kara Fitzpatrick</title>
     <!-- meta tags here -->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
