--- a/index.html
+++ b/index.html
@@ -34,16 +34,19 @@
         color: #CA0962;
         text-decoration: underline;
       }
+      .centered {
+        text-align:center;
+      }
     </style>
   </head>
   <body>
     <div id="logo-container">
       <img src="img/logo.png" id="logo" />
     </div>
-    <div class="text header" id="header">
+    <div class="text header centered" id="header">
       I optimize things.
     </div>
-    <div class="text">
+    <div class="text centered">
       Products. Processes. People.
     </div>
     <div id="photo-container">
