--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+    <meta name="google-site-verification" content="R6o_zfveGNloiJa_4BGLI8PvpIDkDK22YIwKe-zwvEQ" />
     <title>Kara Fitzpatrick</title>
     <!-- meta tags here -->
     <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
