--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         color: #000000;
         font-weight:300;
         font-size: 20px;
-        margin: 20px;
+        margin: 15%;
       }
       div#header {
         font-weight:600;
