--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       I optimize things.
     </div>
     <div class="text centered">
-      Products. Processes. People.
+      Products. Processes.
     </div>
     <div id="photo-container">
       <img src="img/profile1.png" id="profile" />
