--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
       <img src="img/logo.png" id="logo" />
     </div>
     <div class="text header centered" id="header">
-      I optimize things.
-    </div>
-    <div class="text centered">
-      Products. Processes.
+      I optimize products and processes.
     </div>
     <div id="photo-container">
       <img src="img/profile1.png" id="profile" />
