--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
       <img src="img/logo.png" id="logo" />
     </div>
     <div class="text header centered" id="header">
-      I optimize products and processes.
+      I optimize things.
     </div>
     <div id="photo-container">
-      <img src="img/profile1.png" id="profile" />
+      <img src="img/IMG_1925.JPG" id="profile" />
     </div>
     <div class="text">
       As a Program Manager at Branding Brand, I improve our project processes and quality
