--- a/index.html
+++ b/index.html
@@ -44,15 +44,15 @@
     <div id="logo-container">
       <img src="img/logo.png" id="logo" />
     </div>
-    <div class="text header centered" id="header">
-      I optimize things.
-    </div>
     <div id="photo-container">
       <img src="img/IMG_1925.JPG" id="profile" />
     </div>
+    <div class="text header centered" id="header">
+      I optimize things.
+    </div>
     <div class="text">
       As a Program Manager at Branding Brand, I improve our project processes and quality
-      to deliver better shoppings experiences for more than 200 of the top retailers
+      to deliver better shopping experiences for more than 200 of the top retailers
       worldwide. My career at the start-up began when I built a system for writing SEO
       articles for our clients that increased my team's productivity by 200%, and I have continued
       optimizing ever since.
